--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,20 +1,22 @@
 .navbar {
+  height: 20vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 40px;
+  transition: transform 0.5s ease-in-out;
 }
+
 .navbar ul {
   list-style: none;
   display: flex;
+  padding: 0;
   /* gap: indica la distancia entre elementos de la lista */
   gap: 30px;
-  padding: 0;
 }
 
 .navbar a {
-  color: #222;
   text-decoration: none;
+  color: #222;
   /* el tamaño de la fuente será 1.5vw si ese valor está entre 15px y 20px. Si 1.5vw es menor que 15px o mayor que 20px, el tamaño de la fuente será 15px o 20px respectivamente.*/
   font-size: clamp(15px, 1.5vw, 20px);
 }
@@ -23,10 +25,15 @@
   color: #7644a0;
 }
 
+.hide {
+  transform: translateY(-100%);
+}
+
 .logo {
   display: flex;
   position: absolute;
-  margin-left: 43vw;
+  left: 50%;
+  transform: translateX(-50%);
   align-items: center;
 }
 
@@ -39,17 +46,8 @@
   margin-right: -8px;
 }
 
-.navbar a.signin:active {
-  color: #7644a0;
-}
-.navbar a.signup {
-  color: #ffffff;
-  background-color: #111111;
-  border-radius: 80px;
-  padding: 12px 15px;
-}
-.navbar a.signup:active {
-  background-color: rgba(1, 1, 1, 0.4);
+.signUp {
+  margin-left: 3vw;
 }
 
 .signout {
