--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,28 @@
 body {
-  margin: 0;
+  background-color: #ececec;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #ececec;
+  margin: 0 5vw;
+}
+
+/* Personalizar la barra de desplazamiento */
+body::-webkit-scrollbar-track {
+  background: #ececec;
+}
+
+body::-webkit-scrollbar {
+  width: 4px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #555;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: #7644a0;
 }
 
 code {
