--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-/* .App {
-  background-color: #f1f1f1;
-  display: flex;
-  height: 100vh; //viewport height hv => indica la altura de la ventana de visualización
-  overflow: auto;
-} */
+#main-content {
+  height: 100vh;
+  padding: 0 5vw;
+  transition: all 0.5s ease-in-out;
+}
+
