--- a/src/components/ActiveHighlight/ActiveHighlight.module.css
+++ b/src/components/ActiveHighlight/ActiveHighlight.module.css
@@ -2,9 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: max-content;
+  position: relative;
 }
+
 .oval {
   position: absolute;
   height: auto;
-  margin-right: 5;
 }
