--- a/src/components/LoginButtons/LoginButtons.module.css
+++ b/src/components/LoginButtons/LoginButtons.module.css
@@ -1,6 +1,6 @@
 .signin {
   all: unset;
-  font-size: clamp(5px, 1.2vw, 30px);
+  font-size: clamp(2px, 1.2vw, 50px);
 }
 
 .signin:active {
@@ -11,10 +11,10 @@
   all: unset;
   color: #ffffff;
   background-color: #111111;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  font-size: clamp(5px, 1.2vw, 30px);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  font-size: clamp(2px, 1.2vw, 50px);
   border-radius: 80px;
-  padding: 12px 15px;
+  padding: 2.5vh 2vw;
 }
 .signup:active {
   background-color: rgba(1, 1, 1, 0.4);
