--- a/src/components/MainBoard/MainBoard.module.css
+++ b/src/components/MainBoard/MainBoard.module.css
@@ -1,28 +1,34 @@
 .container {
   background-color: #ffffff;
-  /* la altura del navBar es 20hv */
   height: 70vh;
   border-radius: 10px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  overflow: hidden;
+  grid-template-columns: repeat(3, 1fr);
+  contain: content;
+}
+
+.columns {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .column1 {
   display: flex;
-  flex-direction: column;
   justify-content: space-evenly;
-  align-items: center;
   padding: 5vh 2vw;
-  z-index: 1;
 }
 
 .column1 p {
   color: #222222;
 }
+
+.section1 {
+  position: relative;
+}
+
 .section1 p {
-  /* ajustar tamaño de fuente en el rango (5px, 35px) si sobrepasa el rango entonces el valor será 3vw */
-  font-size: clamp(5px, 3vw, 35px);
+  font-size: clamp(6px, 2.5vw, 100px);
   margin: 0.5vh 0;
 }
 
@@ -32,8 +38,7 @@
 }
 
 .section2 p {
-  font-size: clamp(5px, 1.2vw, 30px);
-  margin: 5vh 0;
+  font-size: clamp(2px, 1.2vw, 50px);
 }
 
 .highlightedText {
@@ -41,22 +46,33 @@
   font-weight: bold;
   display: flex;
   flex-direction: column;
-  padding: 0 5px;
+  padding: 0 0.5vw;
 }
 
 .tripleOval {
-  /* display: block; */
   position: absolute;
-  margin-top: clamp(10px, 4.5vh, 20px);
+  bottom: -1vh;
   z-index: -1;
 }
 
 .section3 {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
+  justify-content: center;
   width: 100%;
+}
+
+.section3 p {
+  font-size: clamp(2px, 1.2vw, 50px);
+  text-align: center;
+}
+
+.loginButtonsContainer {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .signup {
@@ -74,6 +90,116 @@
 
 .column2 {
   background-color: #7644a0;
+  position: relative;
+}
+
+.column2 h2 {
+  color: #ffffff;
+  font-size: clamp(5px, 2vw, 100px);
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.column2 h6 {
+  color: #54005f;
+  font-size: clamp(2px, 1.2vw, 50px);
+  text-align: center;
+  margin: 1.5vh 0 5vh;
+}
+
+.section4 {
+  background-color: #ffffff;
+  height: 6vh;
+  border-radius: 4vh;
+  display: flex;
+  position: relative;
+  align-items: center;
+  padding: 1vh 2.5vw;
+}
+
+.section4 p {
+  color: #7644a0;
+  font-size: clamp(5px, 2vw, 50px);
+  font-weight: 700;
+}
+
+.joinStreamBtn {
+  all: unset;
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(2px);
+  height: 6vh;
+  width: 6vh;
+  border-radius: 50%;
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  top: -3vh;
+  left: -3vh;
+}
+
+.joinStreamBtn:active {
+  background-color: rgba(118, 68, 160, 0.2);
+}
+
+.addUserIcon {
+  height: 2vh;
+  width: auto;
+}
+
+.section5 {
+  background-color: #111111;
+  width: 100%;
+  position: relative;
+}
+
+.imgContainer {
+  background-color: rgba(68, 14, 112, 0.664);
+  height: 7vh;
+  width: 7vh;
+  border-radius: 1vh;
+  position: absolute;
+}
+
+.smallImg {
+  height: 90%;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+.smallImgContainer1 {
+  top: 3vh;
+  left: 3vw;
+}
+
+.smallImgContainer2 {
+  right: 3vw;
+  top: 8vh;
+}
+
+.img3 {
+  max-width: 70%;
+  max-height: 55%;
+  position: absolute;
+  bottom: 0;
+}
+
+.reactionBox {
+  background-color: #111111;
+  height: 4vh;
+  width: 4vh;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: -1.8vh 0 0 -1vw;
+}
+
+.reaction {
+  color: #ffffff;
+  height: 2vh;
+  width: 2vh;
 }
 
 .column3 {
