--- a/src/App.module.css
+++ b/src/App.module.css
@@ -18,8 +18,8 @@
   width: 4vh;
   height: 4vh;
   border-radius: 50%;
-  border: 1vh solid #ffffff;
-  border-top: 1vh solid #7644a0;
+  border: 1vh solid var(--color1);
+  border-top: 1vh solid var(--color9);
   margin-top: 2vh;
   animation: spin 1s linear infinite;
 }
