--- a/src/components/Logo/GamorLogo.module.css
+++ b/src/components/Logo/GamorLogo.module.css
@@ -7,25 +7,23 @@
 }
 
 .gamorLogo h1 {
-  font-size: clamp(10px, 2.2vw, 50px);
+  font-size: clamp(12px, 2.4vw, 60px);
 }
 
 .blurCircle {
-  backdrop-filter: blur(4px);
+  backdrop-filter: blur(0.4vw);
   background-color: transparent;
-  height: clamp(10px, 2.2vw, 50px);
-  width: clamp(10px, 2.2vw, 50px);
+  height: clamp(10px, 2.4vw, 50px);
+  width: clamp(10px, 2.4vw, 50px);
   border-radius: 50%;
-  margin-left: -1.3vw;
+  margin-left: -1.52vw;
   position: absolute;
 }
 
-
-.logoTextLight{
-color: #20262D
+.logoTextLight {
+  color: var(--color4);
 }
 
-.logoTextDark{
-  color:#FFFFFF
-          
+.logoTextDark {
+  color: var(--color1);
 }
