--- a/src/colors.css
+++ b/src/colors.css
@@ -21,4 +21,25 @@
   --color18: rgba(199, 101, 44, 0.5);
   --color19: rgba(255, 255, 255, 0.2);
   --color20: rgba(32, 38, 45, 0.4);
+  /* Colores para avatares y categorías de juegos */
+  --color21: rgb(255, 105, 180);
+  --color22: rgb(255, 20, 147);
+  --color23: rgb(220, 11, 102);
+  --color24: rgb(255, 0, 255);
+  --color25: rgb(0, 128, 128);
+  --color26: rgb(0, 255, 255);
+  --color27: rgb(0, 255, 255);
+  --color28: rgb(255, 165, 0);
+  --color29: rgb(255, 85, 18);
+  --color30: rgb(255, 243, 69);
+  --color31: rgb(75, 0, 130);
+  --color32: rgb(128, 0, 128);
+  --color33: rgb(140, 30, 231);
+  --color34: rgb(127, 255, 0);
+  --color35: rgb(31, 243, 80);
+  --color36: rgb(0, 255, 0);
+  --color37: rgb(220, 20, 60);
+  --color38: rgb(253, 0, 0);
+  --color39: rgb(0, 100, 0);
+  --color40: rgb(11, 91, 220);
 }
